# jacquesestimative

./: .zenodo.json  CONTRIBUTORS.md  README.md  cldfbench_jacquesestimative.py  metadata.json  pyproject.toml  setup.py
.github/workflows/: python-package.yml
cldf/: README.md  cldf-metadata.json  codes.csv  examples.csv  languages.csv  parameters.csv  requirements.txt  sources.bib  values.csv
etc/: codes.csv  parameters.csv
raw/: bibliogj.bib  estimative-ex.csv  estimative.csv
